--- a/package.json
+++ b/package.json
@@ -16,13 +16,38 @@
         "mocha": "^9.0.0",
         "mongodb": "^3.6.9",
         "request": "^2.88.2",
-        "slug": "^5.1.0"
+        "slug": "^5.1.0",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^11.2.7",
+        "@testing-library/user-event": "^12.8.3",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-scripts": "4.0.3",
+        "web-vitals": "^1.1.2"
     },
     "devDependencies": {},
     "scripts": {
-        "prod": "pm2 start ecosystem.config.js --env production && pm2 serve ./frontend/build/ 3000",
+        "prod": "pm2 start ecosystem.config.js --env production && pm2 serve ./build/ 3000",
         "dev": "FRONT_PORT=3001 BACK_PORT=8081 MONGO_URL='mongodb://localhost:27017/' node server.js",
         "test": "mocha --timeout 1000"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     },
     "author": "",
     "license": "ISC"
